Fix spacing between OctoCat and Egg in Memory Comp page - Normal Screens

--- a/goose-portfolio/src/Components/MemCompEgg/MemCompEgg.css
+++ b/goose-portfolio/src/Components/MemCompEgg/MemCompEgg.css
@@ -92,7 +92,7 @@
         width: 12%;
         height: auto;
         margin-bottom: 0px;
-        margin-left: 4%;
+        margin-left: 1%;
         
     }
     
